2005-09-27  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Back out the fix for bug #158486 by re-enabling keyword:
	searches. Fixes bug #314974.

2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-notebook.c: (tab_label_style_set_cb),
	(build_tab_label):

	Use the tab label's outer hbox for the size calculation instead
	of the label itself. Fixes size oscillations with the Tab States
	extension.

2005-09-26  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-lockdown.c: (update_window):
	* src/ephy-window.c: (update_popups_tooltips), (show_embed_popup):
	* src/popup-commands.c:
	* src/popup-commands.h:
	* embed/mozilla/EventContext.cpp: (GetEventContext):
	* data/ui/epiphany-ui.xml:

	Unify background image and image code (contex menu, conext event). 
	Fix bug 154887.

2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp: (DoDialog):

	Back out previous change, it doesn't work right when there
	are *two* dialogues shown: the 1st one can only be dismissed
	after the 2nd one has been dismissed.

2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/AutoEventQueue.cpp:
	* embed/mozilla/AutoEventQueue.h:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp: (DoDialog):
	
	Push a new event queue while showing the dialogue
	with gtk_dialog_run. This fixes the problem (caused by the
	braindead API of showing this dialogue synchronously) that
	networking is blocked in all other windows while the dialogue
	is shown.
	
2005-09-25  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* data/epiphany-lockdown.schemas.in:

	Add disable_quit to lockdown gconf schema. Fix bug 316499.

2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>

	* data/epiphany.m4:

	Rename the autoconf macro to EPIPHANY_EXTENSION_INIT() and make it
	check the ephy version, get the extension directory and find out