@@ -1,3 +1,10 @@
+2005-09-28  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* embed/mozilla/FilePicker.cpp:
+
+	Hide the filters combo if there's only the "All" filter.
+
 2005-09-27  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/default-prefs-common.js:
